apps/microbin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbin
  namespace: microbin
  labels:
    app: microbin
spec:
  replicas: 1
  strategy:
    type: Recreate   # important: un seul pod à la fois, car le volume est RWO
  selector:
    matchLabels:
      app: microbin
  template:
    metadata:
      labels:
        app: microbin
    spec:
      containers:
        - name: microbin
          image: danielszabo99/microbin:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/microbin_data
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microbin-data
