apps/microbin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: microbin
  namespace: microbin
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "bin.issamhomelab.org"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
      sectionName: https

  hostnames:
    - "bin.issamhomelab.org"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: microbin
          namespace: microbin
          port: 80
